// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicAlert > should have different headers depending on the mode 1`] = `
<DocumentFragment>
  <header
    class="cl-alert__header"
  >
    <h3
      class="cl-alert__title cl-icon__bomb"
    >
      Test Title
    </h3>
    <button
      aria-label="Close alert popup"
      class="sc-braxZu kxFaoR cl-alert__close-button"
      type="button"
    />
  </header>
</DocumentFragment>
`;

exports[`ChopLogicAlert > should have different headers depending on the mode 2`] = `
<DocumentFragment>
  <header
    class="cl-alert__header"
  >
    <h3
      class="cl-alert__title cl-icon__warning"
    >
      Test Title
    </h3>
    <button
      aria-label="Close alert popup"
      class="sc-braxZu kxFaoR cl-alert__close-button"
      type="button"
    />
  </header>
</DocumentFragment>
`;

exports[`ChopLogicAlert > should have different headers depending on the mode 3`] = `
<DocumentFragment>
  <header
    class="cl-alert__header"
  >
    <h3
      class="cl-alert__title cl-icon__support"
    >
      Test Title
    </h3>
    <button
      aria-label="Close alert popup"
      class="sc-braxZu kxFaoR cl-alert__close-button"
      type="button"
    />
  </header>
</DocumentFragment>
`;

exports[`ChopLogicAlert > should have different headers depending on the mode 4`] = `
<DocumentFragment>
  <header
    class="cl-alert__header"
  >
    <h3
      class="cl-alert__title cl-icon__notification"
    >
      Test Title
    </h3>
    <button
      aria-label="Close alert popup"
      class="sc-braxZu kxFaoR cl-alert__close-button"
      type="button"
    />
  </header>
</DocumentFragment>
`;

exports[`ChopLogicAlert > should have different headers depending on the mode 5`] = `
<DocumentFragment>
  <header
    class="cl-alert__header"
  >
    <h3
      class="cl-alert__title cl-icon__check"
    >
      Test Title
    </h3>
    <button
      aria-label="Close alert popup"
      class="sc-braxZu kxFaoR cl-alert__close-button"
      type="button"
    />
  </header>
</DocumentFragment>
`;
